@@ -12,6 +12,10 @@ import static com.evolveum.midpoint.common.mining.objects.analysis.RoleAnalysisA
 import java.util.*;
 import javax.xml.namespace.QName;
 
+import com.evolveum.midpoint.util.logging.Trace;
+import com.evolveum.midpoint.util.logging.TraceManager;
+import com.evolveum.prism.xml.ns._public.types_3.ItemPathType;
+
 import org.jetbrains.annotations.*;
 
 import com.evolveum.midpoint.common.mining.objects.analysis.RoleAnalysisAttributeDef;
@@ -25,22 +29,14 @@ import com.evolveum.midpoint.xml.ns._public.common.common_3.*;
 
 public class RoleAnalysisAttributeDefUtils {
 
-    public static final ItemName F_NAME = new ItemName(ObjectFactory.NAMESPACE, "name");
-    public static final ItemName F_TITLE = new ItemName(ObjectFactory.NAMESPACE, "title");
-    public static final ItemName F_ORGANIZATION = new ItemName(ObjectFactory.NAMESPACE, "organization");
-    public static final ItemName F_ORGANIZATIONAL_UNIT = new ItemName(ObjectFactory.NAMESPACE, "organizationalUnit");
-    public static final ItemName F_LOCALE = new ItemName(ObjectFactory.NAMESPACE, "locale");
-    public static final ItemName F_LOCALITY = new ItemName(ObjectFactory.NAMESPACE, "locality");
-    public static final ItemName F_COST_CENTER = new ItemName(ObjectFactory.NAMESPACE, "costCenter");
-    public static final ItemName F_LIFECYCLE_STATE = new ItemName(ObjectFactory.NAMESPACE, "lifecycleState");
-    public static final ItemName F_RISK_LEVEL = new ItemName(ObjectFactory.NAMESPACE, "riskLevel");
+    private static final Trace LOGGER = TraceManager.getTrace(RoleAnalysisAttributeDefUtils.class);
 
     public static RoleAnalysisAttributeDef getObjectNameDef() {
         return name;
     }
 
     public static RoleAnalysisAttributeDef name = new RoleAnalysisAttributeDef(
-            F_NAME,
+            FocusType.F_NAME,
             false,
             "name",
             ObjectType.class,
@@ -53,228 +49,247 @@ public class RoleAnalysisAttributeDefUtils {
         }
     };
 
-    public static RoleAnalysisAttributeDef getOrgAssignment() {
-        return orgAssignment;
-    }
+//    public static RoleAnalysisAttributeDef getOrgAssignment() {
+//        return orgAssignment;
+//    }
 
-    public static RoleAnalysisAttributeDef orgAssignment = getRoleAnalysisItemDefAssignment(
-            FocusType.F_ASSIGNMENT, "org assignment", OrgType.COMPLEX_TYPE);
-    public static RoleAnalysisAttributeDef roleAssignment = getRoleAnalysisItemDefAssignment(
-            FocusType.F_ASSIGNMENT, "role assignment", RoleType.COMPLEX_TYPE);
-    public static RoleAnalysisAttributeDef serviceAssignment = getRoleAnalysisItemDefAssignment(
-            FocusType.F_ASSIGNMENT, "service assignment", ServiceType.COMPLEX_TYPE);
-    public static RoleAnalysisAttributeDef archetypeAssignment = getRoleAnalysisItemDefAssignment(
-            FocusType.F_ASSIGNMENT, "archetype assignment", ArchetypeType.COMPLEX_TYPE);
-    public static RoleAnalysisAttributeDef resourceAssignment = getRoleAnalysisItemDefAssignment(
-            FocusType.F_ASSIGNMENT, "resource assignment", ResourceType.COMPLEX_TYPE);
+//    public static RoleAnalysisAttributeDef orgAssignment = getRoleAnalysisItemDefAssignment(
+//            FocusType.F_ASSIGNMENT, "org assignment", OrgType.COMPLEX_TYPE);
+//    public static RoleAnalysisAttributeDef roleAssignment = getRoleAnalysisItemDefAssignment(
+//            FocusType.F_ASSIGNMENT, "role assignment", RoleType.COMPLEX_TYPE);
+//    public static RoleAnalysisAttributeDef serviceAssignment = getRoleAnalysisItemDefAssignment(
+//            FocusType.F_ASSIGNMENT, "service assignment", ServiceType.COMPLEX_TYPE);
+//    public static RoleAnalysisAttributeDef archetypeAssignment = getRoleAnalysisItemDefAssignment(
+//            FocusType.F_ASSIGNMENT, "archetype assignment", ArchetypeType.COMPLEX_TYPE);
+//    public static RoleAnalysisAttributeDef resourceAssignment = getRoleAnalysisItemDefAssignment(
+//            FocusType.F_ASSIGNMENT, "resource assignment", ResourceType.COMPLEX_TYPE);
+//
+//    public static RoleAnalysisAttributeDef orgInducement = getRoleAnalysisItemDefAssignment(
+//            OrgType.F_INDUCEMENT, "org inducement", OrgType.COMPLEX_TYPE);
+//
+//    public static RoleAnalysisAttributeDef roleInducement = getRoleAnalysisItemDefAssignment(
+//            RoleType.F_INDUCEMENT, "role inducement", RoleType.COMPLEX_TYPE);
+//
+//    public static RoleAnalysisAttributeDef serviceInducement = getRoleAnalysisItemDefAssignment(
+//            ServiceType.F_INDUCEMENT, "service inducement", ServiceType.COMPLEX_TYPE);
+//
+//    public static RoleAnalysisAttributeDef archetypeInducement = getRoleAnalysisItemDefAssignment(
+//            ArchetypeType.F_INDUCEMENT, "archetype inducement", ArchetypeType.COMPLEX_TYPE);
 
-    public static RoleAnalysisAttributeDef orgInducement = getRoleAnalysisItemDefAssignment(
-            OrgType.F_INDUCEMENT, "org inducement", OrgType.COMPLEX_TYPE);
+//    public static RoleAnalysisAttributeDef getArchetypeRef() {
+//        return archetypeRef;
+//    }
 
-    public static RoleAnalysisAttributeDef roleInducement = getRoleAnalysisItemDefAssignment(
-            RoleType.F_INDUCEMENT, "role inducement", RoleType.COMPLEX_TYPE);
+//    public static RoleAnalysisAttributeDef archetypeRef = new RoleAnalysisAttributeDef(
+//            ItemPath.create(FocusType.F_ARCHETYPE_REF),
+//            false,
+//            "archetype ref",
+//            ArchetypeType.class,
+//            RoleAnalysisAttributeDef.IdentifierType.OID) {
+//
+//        @Override
+//        public ObjectQuery getQuery(String value) {
+//            return PrismContext.get().queryFor(FocusType.class)
+//                    .item(getPath()).ref(value)
+//                    .build();
+//        }
+//
+//        @Override
+//        public String resolveSingleValueItem(@NotNull PrismObject<?> prismObject, @NotNull ItemPath itemPath) {
+//            Item<PrismValue, ItemDefinition<?>> property = prismObject.findItem(itemPath);
+//
+//            if (property == null) {
+//                return null;
+//            }
+//
+//            Object realValue = property.getRealValue();
+//            if (realValue instanceof ObjectReferenceType objectReference) {
+//                return objectReference.getOid();
+//            }
+//            return null;
+//        }
+//    };
 
-    public static RoleAnalysisAttributeDef serviceInducement = getRoleAnalysisItemDefAssignment(
-            ServiceType.F_INDUCEMENT, "service inducement", ServiceType.COMPLEX_TYPE);
+//    public static RoleAnalysisAttributeDef getTitle() {
+//        return title;
+//    }
+//
+//    public static RoleAnalysisAttributeDef title = new RoleAnalysisAttributeDef(
+//            UserType.F_TITLE,
+//            false,
+//            "title",
+//            UserType.class,
+//            RoleAnalysisAttributeDef.IdentifierType.FINAL) {
+//        @Override
+//        public ObjectQuery getQuery(String value) {
+//            return PrismContext.get().queryFor(UserType.class)
+//                    .item(getPath()).eq(value)
+//                    .build();
+//        }
+//    };
 
-    public static RoleAnalysisAttributeDef archetypeInducement = getRoleAnalysisItemDefAssignment(
-            ArchetypeType.F_INDUCEMENT, "archetype inducement", ArchetypeType.COMPLEX_TYPE);
+//    public static RoleAnalysisAttributeDef locale = new RoleAnalysisAttributeDef(
+//            UserType.F_LOCALE,
+//            false,
+//            "locale",
+//            FocusType.class,
+//            RoleAnalysisAttributeDef.IdentifierType.FINAL) {
+//        @Override
+//        public ObjectQuery getQuery(String value) {
+//            return PrismContext.get().queryFor(FocusType.class)
+//                    .item(getPath()).eq(value)
+//                    .build();
+//        }
+//    };
 
-    public static RoleAnalysisAttributeDef getArchetypeRef() {
-        return archetypeRef;
-    }
+//    public static RoleAnalysisAttributeDef getLocality() {
+//        return locality;
+//    }
+//
+//    public static RoleAnalysisAttributeDef locality = new RoleAnalysisAttributeDef(
+//            UserType.F_LOCALITY,
+//            false,
+//            "locality",
+//            FocusType.class,
+//            RoleAnalysisAttributeDef.IdentifierType.FINAL) {
+//        @Override
+//        public ObjectQuery getQuery(String value) {
+//            return PrismContext.get().queryFor(FocusType.class)
+//                    .item(getPath()).eq(value)
+//                    .build();
+//        }
+//    };
 
-    public static RoleAnalysisAttributeDef archetypeRef = new RoleAnalysisAttributeDef(
-            ItemPath.create(FocusType.F_ARCHETYPE_REF),
-            false,
-            "archetype ref",
-            ArchetypeType.class,
-            RoleAnalysisAttributeDef.IdentifierType.OID) {
+//    public static RoleAnalysisAttributeDef costCenter = new RoleAnalysisAttributeDef(
+//            UserType.F_COST_CENTER,
+//            false,
+//            "costCenter",
+//            FocusType.class,
+//            RoleAnalysisAttributeDef.IdentifierType.FINAL) {
+//        @Override
+//        public ObjectQuery getQuery(String value) {
+//            return PrismContext.get().queryFor(FocusType.class)
+//                    .item(getPath()).eq(value)
+//                    .build();
+//        }
+//    };
 
-        @Override
-        public ObjectQuery getQuery(String value) {
-            return PrismContext.get().queryFor(FocusType.class)
-                    .item(getPath()).ref(value)
-                    .build();
-        }
+//    public static RoleAnalysisAttributeDef lifecycleState = new RoleAnalysisAttributeDef(
+//            UserType.F_LIFECYCLE_STATE,
+//            false,
+//            "lifecycleState",
+//            FocusType.class,
+//            RoleAnalysisAttributeDef.IdentifierType.FINAL) {
+//        @Override
+//        public ObjectQuery getQuery(String value) {
+//            return PrismContext.get().queryFor(FocusType.class)
+//                    .item(getPath()).eq(value)
+//                    .build();
+//        }
+//    };
 
-        @Override
-        public String resolveSingleValueItem(@NotNull PrismObject<?> prismObject, @NotNull ItemPath itemPath) {
-            Item<PrismValue, ItemDefinition<?>> property = prismObject.findItem(itemPath);
+//    public static RoleAnalysisAttributeDef riskLevel = new RoleAnalysisAttributeDef(
+//            RoleType.F_RISK_LEVEL,
+//            false,
+//            "riskLevel",
+//            RoleType.class,
+//            RoleAnalysisAttributeDef.IdentifierType.FINAL) {
+//        @Override
+//        public ObjectQuery getQuery(String value) {
+//            return PrismContext.get().queryFor(RoleType.class)
+//                    .item(getPath()).eq(value)
+//                    .build();
+//        }
+//    };
 
-            if (property == null) {
-                return null;
+    public static RoleAnalysisAttributeDef getAttributeByItemPath(ItemPath itemPath, AnalysisAttributeSettingType analysisAttributeSettings) {
+        List<RoleAnalysisAttributeDef> attributeMap = createAttributeList(analysisAttributeSettings);
+        for (RoleAnalysisAttributeDef attribute : attributeMap) {
+            if (attribute.getPath().equivalent(itemPath)) {
+                return attribute;
             }
+        }
+        return null;
+//        return attributeMap.get(displayValue);
+    }
 
-            Object realValue = property.getRealValue();
-            if (realValue instanceof ObjectReferenceType objectReference) {
-                return objectReference.getOid();
+    public static List<RoleAnalysisAttributeDef> createAttributeList(AnalysisAttributeSettingType analysisAttributeSetting) {
+        List<RoleAnalysisAttributeDef> attributeDefs = new ArrayList<>();
+
+        PrismObjectDefinition<UserType> userDefinition = PrismContext.get().getSchemaRegistry().findObjectDefinitionByCompileTimeClass(UserType.class);
+//
+//        PrismContainerDefinition<AssignmentType> assignmentDefinition = userDefinition.findContainerDefinition(F_ASSIGNMENT);
+//        List<AnalysisAttributeRuleType> assignmentRules = analysisAttributeSetting.getAssignmentRule();
+//        for (AnalysisAttributeRuleType rule : assignmentRules) {
+//            RoleAnalysisAttributeDef attributeDef = new RoleAnalysisAssignmentAttributeDef(ItemPath.create(F_ASSIGNMENT, AssignmentType.F_TARGET_REF), assignmentDefinition, rule);
+//            attributeDefs.add(attributeDef);
+//        }
+
+        List<ItemPathType> analysisAttributeRule = analysisAttributeSetting.getPath();
+
+        if (analysisAttributeRule.isEmpty()) {
+            return attributeDefs;
+        }
+
+        for (ItemPathType itemPathType : analysisAttributeRule) {
+            if (itemPathType == null) {
+                continue;
             }
-            return null;
+            ItemPath path = itemPathType.getItemPath();
+            ItemDefinition<?> itemDefinition = userDefinition.findItemDefinition(path);
+            if (itemDefinition instanceof PrismContainerDefinition<?>) {
+                LOGGER.debug("Skipping {} because container items are not supported for attribute analysis.", itemDefinition);
+                continue;
+            }
+            //TODO reference vs. property
+            RoleAnalysisAttributeDef attributeDef = new RoleAnalysisAttributeDef(path, itemDefinition);
+            attributeDefs.add(attributeDef);
         }
-    };
-
-    public static RoleAnalysisAttributeDef getTitle() {
-        return title;
+        return attributeDefs;
     }
 
-    public static RoleAnalysisAttributeDef title = new RoleAnalysisAttributeDef(
-            F_TITLE,
-            false,
-            "title",
-            UserType.class,
-            RoleAnalysisAttributeDef.IdentifierType.FINAL) {
-        @Override
-        public ObjectQuery getQuery(String value) {
-            return PrismContext.get().queryFor(UserType.class)
-                    .item(getPath()).eq(value)
-                    .build();
-        }
-    };
 
-    public static RoleAnalysisAttributeDef locale = new RoleAnalysisAttributeDef(
-            F_LOCALE,
-            false,
-            "locale",
-            FocusType.class,
-            RoleAnalysisAttributeDef.IdentifierType.FINAL) {
-        @Override
-        public ObjectQuery getQuery(String value) {
-            return PrismContext.get().queryFor(FocusType.class)
-                    .item(getPath()).eq(value)
-                    .build();
-        }
-    };
 
-    public static RoleAnalysisAttributeDef getLocality() {
-        return locality;
-    }
+//    public static @NotNull List<RoleAnalysisAttributeDef> getAttributesForRoleAnalysis() {
+//        List<RoleAnalysisAttributeDef> analysisAttributeDefs = new ArrayList<>(List.of(
+////                lifecycleState,
+////                locale,
+//                locality,
+//                costCenter,
+//                riskLevel,
+//                orgAssignment,
+//                resourceAssignment,
+//                roleAssignment,
+//                serviceAssignment,
+//                orgInducement,
+//                roleInducement,
+//                serviceInducement,
+//                archetypeRef
+//        ));
+//        analysisAttributeDefs.addAll(loadRoleExtension());
+//
+//        return Collections.unmodifiableList(analysisAttributeDefs);
+//    }
 
-    public static RoleAnalysisAttributeDef locality = new RoleAnalysisAttributeDef(
-            F_LOCALITY,
-            false,
-            "locality",
-            FocusType.class,
-            RoleAnalysisAttributeDef.IdentifierType.FINAL) {
-        @Override
-        public ObjectQuery getQuery(String value) {
-            return PrismContext.get().queryFor(FocusType.class)
-                    .item(getPath()).eq(value)
-                    .build();
-        }
-    };
-
-    public static RoleAnalysisAttributeDef costCenter = new RoleAnalysisAttributeDef(
-            F_COST_CENTER,
-            false,
-            "costCenter",
-            FocusType.class,
-            RoleAnalysisAttributeDef.IdentifierType.FINAL) {
-        @Override
-        public ObjectQuery getQuery(String value) {
-            return PrismContext.get().queryFor(FocusType.class)
-                    .item(getPath()).eq(value)
-                    .build();
-        }
-    };
-
-    public static RoleAnalysisAttributeDef lifecycleState = new RoleAnalysisAttributeDef(
-            F_LIFECYCLE_STATE,
-            false,
-            "lifecycleState",
-            FocusType.class,
-            RoleAnalysisAttributeDef.IdentifierType.FINAL) {
-        @Override
-        public ObjectQuery getQuery(String value) {
-            return PrismContext.get().queryFor(FocusType.class)
-                    .item(getPath()).eq(value)
-                    .build();
-        }
-    };
-
-    public static RoleAnalysisAttributeDef riskLevel = new RoleAnalysisAttributeDef(
-            F_RISK_LEVEL,
-            false,
-            "riskLevel",
-            RoleType.class,
-            RoleAnalysisAttributeDef.IdentifierType.FINAL) {
-        @Override
-        public ObjectQuery getQuery(String value) {
-            return PrismContext.get().queryFor(RoleType.class)
-                    .item(getPath()).eq(value)
-                    .build();
-        }
-    };
-
-    public static RoleAnalysisAttributeDef getAttributeByDisplayValue(String displayValue) {
-        Map<String, RoleAnalysisAttributeDef> attributeMap = createAttributeMap();
-        return attributeMap.get(displayValue);
-    }
-
-    public static @NotNull @UnmodifiableView Map<String, RoleAnalysisAttributeDef> createAttributeMap() {
-        Map<String, RoleAnalysisAttributeDef> attributeMap = new HashMap<>();
-        attributeMap.put(orgAssignment.getDisplayValue(), orgAssignment);
-        attributeMap.put(roleAssignment.getDisplayValue(), roleAssignment);
-        attributeMap.put(serviceAssignment.getDisplayValue(), serviceAssignment);
-        attributeMap.put(archetypeAssignment.getDisplayValue(), archetypeAssignment);
-        attributeMap.put(resourceAssignment.getDisplayValue(), resourceAssignment);
-        attributeMap.put(orgInducement.getDisplayValue(), orgInducement);
-        attributeMap.put(roleInducement.getDisplayValue(), roleInducement);
-        attributeMap.put(serviceInducement.getDisplayValue(), serviceInducement);
-        attributeMap.put(archetypeInducement.getDisplayValue(), archetypeInducement);
-        attributeMap.put(archetypeRef.getDisplayValue(), archetypeRef);
-        attributeMap.put(title.getDisplayValue(), title);
-        attributeMap.put(locale.getDisplayValue(), locale);
-        attributeMap.put(locality.getDisplayValue(), locality);
-        attributeMap.put(costCenter.getDisplayValue(), costCenter);
-        attributeMap.put(lifecycleState.getDisplayValue(), lifecycleState);
-        attributeMap.put(riskLevel.getDisplayValue(), riskLevel);
-
-        loadRoleExtension().forEach(attribute -> attributeMap.put(attribute.getDisplayValue(), attribute));
-        loadUserExtension().forEach(attribute -> attributeMap.put(attribute.getDisplayValue(), attribute));
-        return Collections.unmodifiableMap(attributeMap);
-    }
-
-    public static @NotNull List<RoleAnalysisAttributeDef> getAttributesForRoleAnalysis() {
-        List<RoleAnalysisAttributeDef> analysisAttributeDefs = new ArrayList<>(List.of(
-                lifecycleState,
-                locale,
-                locality,
-                costCenter,
-                riskLevel,
-                orgAssignment,
-                resourceAssignment,
-                roleAssignment,
-                serviceAssignment,
-                orgInducement,
-                roleInducement,
-                serviceInducement,
-                archetypeRef
-        ));
-        analysisAttributeDefs.addAll(loadRoleExtension());
-
-        return Collections.unmodifiableList(analysisAttributeDefs);
-    }
-
-    public static @NotNull List<RoleAnalysisAttributeDef> getAttributesForUserAnalysis() {
-        List<RoleAnalysisAttributeDef> analysisAttributeDefs = new ArrayList<>(List.of(
-                title,
-                locale,
-                locality,
-                costCenter,
-                lifecycleState,
-//                archetypeAssignment,
-                orgAssignment,
-                resourceAssignment,
-                roleAssignment,
-                serviceAssignment,
-                archetypeRef
-        ));
-
-        analysisAttributeDefs.addAll(loadUserExtension());
-
-        return Collections.unmodifiableList(analysisAttributeDefs);
-    }
+//    public static @NotNull List<RoleAnalysisAttributeDef> getAttributesForUserAnalysis() {
+//        List<RoleAnalysisAttributeDef> analysisAttributeDefs = new ArrayList<>(List.of(
+//                title,
+////                locale,
+//                locality,
+//                costCenter,
+////                lifecycleState,
+////                archetypeAssignment,
+//                orgAssignment,
+//                resourceAssignment,
+//                roleAssignment,
+//                serviceAssignment,
+//                archetypeRef
+//        ));
+//
+//        analysisAttributeDefs.addAll(loadUserExtension());
+//
+//        return Collections.unmodifiableList(analysisAttributeDefs);
+//    }
 
     @NotNull
     private static RoleAnalysisAttributeDef getRoleAnalysisItemDefAssignment(
@@ -640,7 +655,7 @@ public class RoleAnalysisAttributeDefUtils {
         return null;
     }
 
-    private static boolean isSupportedPropertyType(@NotNull Class<?> typeClass) {
+    public static boolean isSupportedPropertyType(@NotNull Class<?> typeClass) {
         return typeClass.equals(Integer.class) || typeClass.equals(Long.class) || typeClass.equals(Boolean.class)
                 || typeClass.equals(Double.class) || typeClass.equals(String.class) || typeClass.equals(PolyString.class);
     }
@@ -658,94 +673,77 @@ public class RoleAnalysisAttributeDefUtils {
         return null;
     }
 
-    public static @NotNull List<AnalysisAttributeRuleType> createAnalysisAttributeChoiceSet() {
+//    public static @NotNull List<ItemPath> createAnalysisAttributeChoiceSet() {
 
-        List<AnalysisAttributeRuleType> result = new ArrayList<>();
-        List<RoleAnalysisAttributeDef> roleAttributesForRoleAnalysis = new ArrayList<>(
-                RoleAnalysisAttributeDefUtils.getAttributesForRoleAnalysis());
-        List<RoleAnalysisAttributeDef> userAttributesForUserAnalysis = new ArrayList<>(
-                RoleAnalysisAttributeDefUtils.getAttributesForUserAnalysis());
+//        List<AnalysisAttributeRuleType> result = new ArrayList<>();
+//        List<RoleAnalysisAttributeDef> roleAttributesForRoleAnalysis = new ArrayList<>(
+//                RoleAnalysisAttributeDefUtils.getAttributesForRoleAnalysis());
+//        List<RoleAnalysisAttributeDef> userAttributesForUserAnalysis = new ArrayList<>(
+//                RoleAnalysisAttributeDefUtils.getAttributesForUserAnalysis());
+//
+//        addAttributesToResult(roleAttributesForRoleAnalysis, result, RoleType.COMPLEX_TYPE);
+//        addAttributesToResult(userAttributesForUserAnalysis, result, UserType.COMPLEX_TYPE);
+//    }
 
-        addAttributesToResult(roleAttributesForRoleAnalysis, result, RoleType.COMPLEX_TYPE);
-        addAttributesToResult(userAttributesForUserAnalysis, result, UserType.COMPLEX_TYPE);
 
-        return result;
-    }
+//    private static void addAttributesToResult(
+//            @NotNull List<RoleAnalysisAttributeDef> attributeDef,
+//            @NotNull List<AnalysisAttributeRuleType> result,
+//            @NotNull QName complexType) {
+//        for (RoleAnalysisAttributeDef def : attributeDef) {
+//            result.add(createAnalysisAttributeRule(def, complexType));
+//        }
+//    }
+//
+//    private static @NotNull AnalysisAttributeRuleType createAnalysisAttributeRule(
+//            @NotNull RoleAnalysisAttributeDef def,
+//            @NotNull QName complexType) {
+//        AnalysisAttributeRuleType rule = new AnalysisAttributeRuleType();
+////        rule.setsetAttributeIdentifier(def.getDisplayValue());
+////        rule.setPropertyType(complexType);
+//        return rule;
+//    }
 
-    private static void addAttributesToResult(
-            @NotNull List<RoleAnalysisAttributeDef> attributeDef,
-            @NotNull List<AnalysisAttributeRuleType> result,
-            @NotNull QName complexType) {
-        for (RoleAnalysisAttributeDef def : attributeDef) {
-            result.add(createAnalysisAttributeRule(def, complexType));
-        }
-    }
+//
+//    @NotNull
+//    public static List<RoleAnalysisAttributeDef> createSimpleUserAttributeChoiceSet() {
+//        List<RoleAnalysisAttributeDef> attributesForUserAnalysis = new ArrayList<>(getAttributesForUserAnalysis());
+//        attributesForUserAnalysis.removeIf(RoleAnalysisAttributeDef::isContainer);
+//
+//        RoleAnalysisAttributeDef objectNameDef = getObjectNameDef();
+//        attributesForUserAnalysis.add(0, objectNameDef);
+//        return attributesForUserAnalysis;
+//    }
+//
+//    @NotNull
+//    public static List<RoleAnalysisAttributeDef> createSimpleRoleAttributeChoiceSet() {
+//        List<RoleAnalysisAttributeDef> attributesForRoleAnalysis = new ArrayList<>(getAttributesForRoleAnalysis());
+//        attributesForRoleAnalysis.removeIf(RoleAnalysisAttributeDef::isContainer);
+//
+//        RoleAnalysisAttributeDef objectNameDef = getObjectNameDef();
+//        attributesForRoleAnalysis.add(0, objectNameDef);
+//        return attributesForRoleAnalysis;
+//    }
 
-    private static @NotNull AnalysisAttributeRuleType createAnalysisAttributeRule(
-            @NotNull RoleAnalysisAttributeDef def,
-            @NotNull QName complexType) {
-        AnalysisAttributeRuleType rule = new AnalysisAttributeRuleType();
-        rule.setAttributeIdentifier(def.getDisplayValue());
-        rule.setPropertyType(complexType);
-        return rule;
-    }
-
-    public static @NotNull List<AnalysisAttributeRuleType> createChoiceUserRoleAttributeSet() {
-        //TODO mark good
-        List<RoleAnalysisAttributeDef> attributesForUserAnalysis = new ArrayList<>(
-                RoleAnalysisAttributeDefUtils.getAttributesForUserAnalysis());
-
-        attributesForUserAnalysis.addAll(RoleAnalysisAttributeDefUtils.getAttributesForRoleAnalysis());
-
-        List<AnalysisAttributeRuleType> result = new ArrayList<>();
-        for (RoleAnalysisAttributeDef def : attributesForUserAnalysis) {
-            AnalysisAttributeRuleType rule = new AnalysisAttributeRuleType();
-            rule.setAttributeIdentifier(def.getDisplayValue());
-            rule.setPropertyType(def.getComplexType());
-            result.add(rule);
-        }
-        return result;
-    }
-
-    @NotNull
-    public static List<RoleAnalysisAttributeDef> createSimpleUserAttributeChoiceSet() {
-        List<RoleAnalysisAttributeDef> attributesForUserAnalysis = new ArrayList<>(getAttributesForUserAnalysis());
-        attributesForUserAnalysis.removeIf(RoleAnalysisAttributeDef::isContainer);
-
-        RoleAnalysisAttributeDef objectNameDef = getObjectNameDef();
-        attributesForUserAnalysis.add(0, objectNameDef);
-        return attributesForUserAnalysis;
-    }
-
-    @NotNull
-    public static List<RoleAnalysisAttributeDef> createSimpleRoleAttributeChoiceSet() {
-        List<RoleAnalysisAttributeDef> attributesForRoleAnalysis = new ArrayList<>(getAttributesForRoleAnalysis());
-        attributesForRoleAnalysis.removeIf(RoleAnalysisAttributeDef::isContainer);
-
-        RoleAnalysisAttributeDef objectNameDef = getObjectNameDef();
-        attributesForRoleAnalysis.add(0, objectNameDef);
-        return attributesForRoleAnalysis;
-    }
-
-    public static @NotNull List<ClusteringAttributeRuleType> createClusteringAttributeChoiceSet(
-            @NotNull RoleAnalysisProcessModeType processModeType) {
-        List<RoleAnalysisAttributeDef> attributesForUserAnalysis;
-        if (processModeType.equals(RoleAnalysisProcessModeType.USER)) {
-            attributesForUserAnalysis = RoleAnalysisAttributeDefUtils.getAttributesForUserAnalysis();
-        } else {
-            attributesForUserAnalysis = RoleAnalysisAttributeDefUtils.getAttributesForRoleAnalysis();
-        }
-
-        List<ClusteringAttributeRuleType> result = new ArrayList<>();
-        for (RoleAnalysisAttributeDef def : attributesForUserAnalysis) {
-            ClusteringAttributeRuleType rule = new ClusteringAttributeRuleType();
-            rule.setAttributeIdentifier(def.getDisplayValue());
-            rule.setSimilarity(100.0);
-            rule.setWeight(1.0);
-            rule.setIsMultiValue(def.isContainer());
-            result.add(rule);
-        }
-        return result;
-    }
+//    public static @NotNull List<ClusteringAttributeRuleType> createClusteringAttributeChoiceSet(
+//            @NotNull RoleAnalysisProcessModeType processModeType) {
+//        List<RoleAnalysisAttributeDef> attributesForUserAnalysis;
+//        if (processModeType.equals(RoleAnalysisProcessModeType.USER)) {
+//            attributesForUserAnalysis = RoleAnalysisAttributeDefUtils.getAttributesForUserAnalysis();
+//        } else {
+//            attributesForUserAnalysis = RoleAnalysisAttributeDefUtils.getAttributesForRoleAnalysis();
+//        }
+//
+//        List<ClusteringAttributeRuleType> result = new ArrayList<>();
+//        for (RoleAnalysisAttributeDef def : attributesForUserAnalysis) {
+//            ClusteringAttributeRuleType rule = new ClusteringAttributeRuleType();
+//            rule.setPath(def.getPath().toBean());
+//            rule.setSimilarity(100.0);
+//            rule.setWeight(1.0);
+//            rule.setIsMultiValue(def.isContainer());
+//            result.add(rule);
+//        }
+//        return result;
+//    }
 
 }
